# tests

./: .env.example  .gitattributes  .gitignore  .replit  CNAME  README.md  SEO_AUDIT_FINAL_REPORT.md  SEO_AUDIT_REPORT.md  ad-analysis.md  ad-slots-reference.md  add_coupang_to_tests.py  add_mobile_web_app_meta.py  ads.txt  advanced_seo_enhancer.py  apply_coupang_ads.py  apply_mobile_coupang_ads.py  apply_mobile_responsive_coupang.py  auto_commit.py  check_adsense_status.py  check_romance_test_files.py  clean_ad_codes.py  clean_incomplete_adsense.py  clean_test_titles.py  config.py  egen-teto-ko.html  egen_teto_seo_enhancer.py  ensure_home_links.py  find_missing_tags.py  find_title_issues.py  fix_adsense.py  fix_coupang_width.py  fix_css_link_scripts.py  fix_favicon_paths.py  fix_ga_romance_test.py  fix_ja_css_links.py  fix_json_ld_and_css.py  fix_json_ld_scripts.py  fix_missing_script_closing_tags.py  fix_missing_script_tags.py  fix_romance_ads.py  (+40 more)
anime-personality/: create_favicon.html  generate_all_images.html  generate_images.py
assets/: accessibility.js  analytics-enhanced.js  chart-visualization.js  common-components.js  common-theme.css  enhanced-animations.css  enhanced-features.js  index-zCtgUHeI.js  module-loader.js  quiz-engine.js  recommendations-manager.js  result-analysis.js  seo-optimizer.js
attached_assets/: Pasted--1-2-3--1752886686549_1752886686549.txt  Pasted--1-title-title-meta-description--1753236834023_1753236834023.txt  Pasted--DOCTYPE-html-html-lang-ko-head-meta-charset-UTF-8-meta-name-viewport-content--1752157042067_1752157042067.txt  (+7 more)
(+225 files in other folders)
